// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultInputsService when getting non arcanol inputs should return Lubricant inputs observable translation 1`] = `
Array [
  Object {
    "title": "translated: pages.lubricant.title",
    "value": "translated: recommendation.lubrication.options.grease",
  },
]
`;

exports[`ResultInputsService when getting non arcanol inputs should return application inputs observable translation 1`] = `
Array [
  Object {
    "title": "translated: inputs.temperature.title",
    "value": "translated: inputs.temperature.value",
  },
  Object {
    "title": "translated: inputs.powerSupplyTitle",
    "value": "translated: recommendation.application.powerOptions.external",
  },
]
`;

exports[`ResultInputsService when getting non arcanol inputs should return lubrication Points inputs observable translation 1`] = `
Array [
  Object {
    "title": "translated: inputs.lubricationPoints",
    "value": "2-4",
  },
  Object {
    "title": "translated: inputs.relubricationQuantity.title",
    "value": "translated: inputs.relubricationQuantity.value",
  },
  Object {
    "title": "translated: inputs.maxPipeLengthTitle",
    "value": "translated: recommendation.lubricationPoints.pipeLengthOptions.lessThan",
  },
  Object {
    "remoteValue": "translated: recommendation.lubricationPoints.optime.0",
    "title": "translated: inputs.optimeTitle",
    "value": "translated: recommendation.lubricationPoints.optime.0",
  },
]
`;

exports[`ResultInputsService when getting non arcanol inputs should return title observable translation 1`] = `"translated: pages.lubricationPoints.title"`;

exports[`ResultInputsService when getting non arcanol inputs should return title observable translation 2`] = `"translated: pages.lubricant.title"`;

exports[`ResultInputsService when getting non arcanol inputs should return title observable translation 3`] = `"translated: pages.application.title"`;

exports[`ResultInputsService when getting result inputs should return Lubricant observable translation 1`] = `
Array [
  Object {
    "title": "translated: inputs.lubricationPoints",
    "value": "2-4",
  },
  Object {
    "title": "translated: inputs.relubricationQuantity.title",
    "value": "translated: inputs.relubricationQuantity.value",
  },
  Object {
    "title": "translated: inputs.maxPipeLengthTitle",
    "value": "translated: recommendation.lubricationPoints.pipeLengthOptions.directMontage",
  },
  Object {
    "remoteValue": "translated: recommendation.lubricationPoints.optime.0",
    "title": "translated: inputs.optimeTitle",
    "value": "translated: recommendation.lubricationPoints.optime.0",
  },
]
`;

exports[`ResultInputsService when getting result inputs should return Lubricant observable translation 2`] = `
Array [
  Object {
    "title": "translated: pages.lubricant.title",
    "value": "Arcanol MULTI2",
  },
]
`;

exports[`ResultInputsService when getting result inputs should return application observable translation 1`] = `
Array [
  Object {
    "title": "translated: inputs.lubricationPoints",
    "value": "2-4",
  },
  Object {
    "title": "translated: inputs.relubricationQuantity.title",
    "value": "translated: inputs.relubricationQuantity.value",
  },
  Object {
    "title": "translated: inputs.maxPipeLengthTitle",
    "value": "translated: recommendation.lubricationPoints.pipeLengthOptions.directMontage",
  },
  Object {
    "remoteValue": "translated: recommendation.lubricationPoints.optime.0",
    "title": "translated: inputs.optimeTitle",
    "value": "translated: recommendation.lubricationPoints.optime.0",
  },
]
`;

exports[`ResultInputsService when getting result inputs should return application observable translation 2`] = `
Array [
  Object {
    "title": "translated: inputs.temperature.title",
    "value": "translated: inputs.temperature.value",
  },
  Object {
    "title": "translated: inputs.powerSupplyTitle",
    "value": "translated: recommendation.application.powerOptions.external",
  },
]
`;

exports[`ResultInputsService when getting result inputs should return lubrication Points observable translation 1`] = `
Array [
  Object {
    "title": "translated: inputs.lubricationPoints",
    "value": "2-4",
  },
  Object {
    "title": "translated: inputs.relubricationQuantity.title",
    "value": "translated: inputs.relubricationQuantity.value",
  },
  Object {
    "title": "translated: inputs.maxPipeLengthTitle",
    "value": "translated: recommendation.lubricationPoints.pipeLengthOptions.directMontage",
  },
  Object {
    "remoteValue": "translated: recommendation.lubricationPoints.optime.0",
    "title": "translated: inputs.optimeTitle",
    "value": "translated: recommendation.lubricationPoints.optime.0",
  },
]
`;

exports[`ResultInputsService when getting result inputs should return title observable translation 1`] = `"translated: pages.lubricationPoints.title"`;

exports[`ResultInputsService when getting result inputs should return title observable translation 2`] = `"translated: pages.lubricant.title"`;

exports[`ResultInputsService when getting result inputs should return title observable translation 3`] = `"translated: pages.application.title"`;

exports[`ResultInputsService when getting result inputs when remote optime returns error should return lubrication Points observable translation based on form value 1`] = `
Array [
  Object {
    "title": "translated: inputs.lubricationPoints",
    "value": "2-4",
  },
  Object {
    "title": "translated: inputs.relubricationQuantity.title",
    "value": "translated: inputs.relubricationQuantity.value",
  },
  Object {
    "title": "translated: inputs.maxPipeLengthTitle",
    "value": "translated: recommendation.lubricationPoints.pipeLengthOptions.directMontage",
  },
  Object {
    "remoteValue": "translated: recommendation.lubricationPoints.optime.0",
    "title": "translated: inputs.optimeTitle",
    "value": "translated: recommendation.lubricationPoints.optime.0",
  },
]
`;

exports[`ResultInputsService when getting result inputs when remote optime returns error should return lubrication Points observable translation based on form value 2`] = `
Array [
  Object {
    "title": "translated: inputs.lubricationPoints",
    "value": "2-4",
  },
  Object {
    "title": "translated: inputs.relubricationQuantity.title",
    "value": "translated: inputs.relubricationQuantity.value",
  },
  Object {
    "title": "translated: inputs.maxPipeLengthTitle",
    "value": "translated: recommendation.lubricationPoints.pipeLengthOptions.directMontage",
  },
  Object {
    "remoteValue": "translated: recommendation.lubricationPoints.optime.0",
    "title": "translated: inputs.optimeTitle",
    "value": "translated: recommendation.lubricationPoints.optime.0",
  },
]
`;

exports[`ResultInputsService when getting result inputs when remote optime returns error should return lubrication Points observable translation based on form value 3`] = `
Array [
  Object {
    "title": "translated: inputs.lubricationPoints",
    "value": "2-4",
  },
  Object {
    "title": "translated: inputs.relubricationQuantity.title",
    "value": "translated: inputs.relubricationQuantity.value",
  },
  Object {
    "title": "translated: inputs.maxPipeLengthTitle",
    "value": "translated: recommendation.lubricationPoints.pipeLengthOptions.between",
  },
  Object {
    "remoteValue": "translated: recommendation.lubricationPoints.optime.0",
    "title": "translated: inputs.optimeTitle",
    "value": "translated: recommendation.lubricationPoints.optime.0",
  },
]
`;
